<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ublox.BLE_med.fragments.TestFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp">

                    <Switch
                        android:id="@+id/swCredits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Credits"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPhyMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="PHY mode" />

                    <RadioGroup
                        android:id="@+id/rgPhyMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/rb2Mpbs"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb1Mpbs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:gravity="center_vertical|center_horizontal|center"
                            android:text="1 Mbps" />

                        <RadioButton
                            android:id="@id/rb2Mpbs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2 Mbps" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MTU size" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvMtuSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="\?" />

                    <EditText
                        android:id="@+id/etMtuSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:text="" />

                    <Button
                        android:id="@+id/bMtu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:text="Request"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Connection priority" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spConnPrio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/bConnPrio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:text="Request"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_bg_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@color/white_color"
                android:orientation="vertical"
                android:padding="16dp">

                <Switch
                    android:id="@+id/swTxTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tx test"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Test mode" />

                    <RadioGroup
                        android:id="@+id/rgMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:checkedButton="@+id/continuous"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:gravity="center_vertical|center_horizontal|center"
                            android:text="packet" />

                        <RadioButton
                            android:id="@+id/continuous"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="continuous" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Packet size" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/etPacketSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:text="20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="bytes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bit error" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/cbBitError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sent" />

                    <TextView
                        android:id="@+id/tvTxCounter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 B"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Avg" />

                    <TextView
                        android:id="@+id/tvTxAvg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 kbps"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="right"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_bg_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@color/white_color"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rx test"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/bRxReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        android:text="Clear"
                        android:textSize="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Received" />

                    <TextView
                        android:id="@+id/tvRxCounter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 B"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="right"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Avg" />

                    <TextView
                        android:id="@+id/tvRxAvg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0 kbps"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="right"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>