...
                    android:hint="Int"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <Button
                    android:id="@+id/bSend"
                    android:text="SEND"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

...
